# hello-rust

./: Cargo.toml  README.md  notes.md
cli-tools/grep-clone/: Cargo.toml  README.md  demo.txt
cli-tools/grep-clone/src/: main.rs
cli-tools/kawai/: Cargo.toml  README.md
cli-tools/kawai/src/: cli.rs  main.rs
cli-tools/kawai/src/anime/: http.rs  mod.rs  structs.rs
guessing-game/: Cargo.toml
guessing-game/src/: main.rs
matchsticks-game/: Cargo.toml
matchsticks-game/src/: main.rs
snake-game/: Cargo.toml  README.md
snake-game/src/: block.rs  constants.rs  food.rs  game.rs  main.rs  snake.rs  util.rs
src/: 1.number-parity.rs  2.primality.rs  3.fizzbuzz.rs  3.leap_year.rs  4.print_in_a_frame.rs  7.form_expression_to_target.rs  8.eng2morse.rs
toy-problems/: Cargo.toml  README.md
toy-problems/src/: 5.pig_latin.rs
